<resources>
    <string name="app_name">FallDetectionApp</string>
    <string name="connect_nbracelet">Connect\nbracelet</string>
    <string name="log_out">Log out</string>
    <string name="add_device_image">Add device image</string>
    <string name="fall_detection_app">Fall Detection App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="add_emergency_contact_1">ADD\nEMERGENCY\nCONTACT 1</string>
    <string name="settings">Settings</string>
    <string name="add_emergency_contact_2">ADD\nEMERGENCY\nCONTACT 2</string>
    <string name="fall_detected">FALL\nDETECTED</string>
    <string name="time_xx_xx">TIME XX XX</string>
    <string name="alert_was_sent">Alert was sent</string>
    <string name="home">Home</string>
    <string name="personal_report">Personal report</string>
    <string name="reports">Reports</string>
    <string name="stats">Stats</string>
    <string name="fallert_logo">Fallert Logo</string>
    <string name="add_emergency_contact_3">ADD\nEMERGENCY\nCONTACT 3</string>

    <string-array name="sexes">
        <item>Female</item>
        <item>Male</item>
        <item>Not specified</item>
    </string-array>

</resources>