<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F7F4F4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="450dp"
            android:src="@drawable/fallert_man"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.26" />

            <ImageView
                android:id="@+id/imageViewFallertLogo"
                android:layout_width="226dp"
                android:layout_height="51dp"
                android:layout_weight="0.062"
                android:layout_gravity="center"
                android:contentDescription="@string/fallert_logo"
                app:srcCompat="@drawable/fallert_logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.167" />

            <Button
                android:id="@+id/buttonSignIn"
                style="@style/StandardButton.InitialActivity"
                android:text="@string/sign_in" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.075" />

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/StandardButton.InitialActivity"
                android:text="@string/sign_up" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.322" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>