<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/StandardLayout">

        <ImageButton
            android:id="@+id/buttonHomeFromFallDetected"
            style="@style/CornerButton.HomeImageButton"
            android:contentDescription="Button home" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/fall_detected_card">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textViewFallDetected"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/josefin_sans_bold"
                android:text="@string/fall_detected"
                android:textAlignment="center"
                android:textColor="@color/standard_blue"
                android:textSize="45sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="65dp" />

            <TextView
                android:id="@+id/textViewTimeFall"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:text="@string/time_xx_xx"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/standard_blue"
                android:fontFamily="@font/josefin_sans_semibold"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textViewAlertSent"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:text="@string/alert_was_sent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/standard_blue"
                android:fontFamily="@font/josefin_sans_semibold"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>