<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/StandardLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonBackToHomeFromSettings"
                style="@style/CornerButton.BackImageButton"
                android:contentDescription="Button back" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Switch
                android:id="@+id/switchAlertMode"
                android:layout_width="180dp"
                android:layout_marginEnd="10dp"
                android:layout_height="match_parent"
                android:text="Alert Mode"
                android:textColor="@color/standard_blue"
                android:fontFamily="@font/josefin_sans_bold_italic"
                android:textSize="20sp"
                android:textStyle="bold"
                android:thumb="@drawable/alert_mode_switch_call_icon" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/josefin_sans_bold_italic"
            android:text="Contacts"
            android:textAlignment="center"
            android:textColor="@color/standard_blue"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10" />

        <Button
            android:id="@+id/buttonEC1"
            android:text="@string/add_emergency_contact_1"
            style="@style/EmergencyContactButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08" />

        <Button
            android:id="@+id/buttonEC2"
            android:text="@string/add_emergency_contact_2"
            style="@style/EmergencyContactButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08" />

        <Button
            android:id="@+id/buttonEC3"
            android:text="@string/add_emergency_contact_3"
            style="@style/EmergencyContactButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.17" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>